# UniBackpack

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
debian/: changelog  control  files  rules  unibackpack.desktop  unibackpack.install
include/: Downloader.hpp  MainWindow.hpp  ProgressWindow.hpp
include/resources/lists/University of Western Macedonia/Informatics/: apt_list.txt
src/: Downloader.cpp  MainWindow.cpp  ProgressWindow.cpp  main.cpp
translations/: unibackpack_el.ts  unibackpack_en.ts
